--- a/src/app/add-member/add-member.component.css
+++ b/src/app/add-member/add-member.component.css
@@ -103,7 +103,7 @@ header {
     align-items: center;
     height: 400px; 
     width: 400px;
-    margin-top: -100px;
+    /* margin-top: -100px; */
 }
 
 .book-image {
